<resources>
    <string name="app_name">BlackJack</string>
    <string name="Play">Play</string>
    <string name="howToPlay">How to play</string>
    <string name="aboutTheApp">About</string>
    <string name="homeImageDesc">A hand of Ace, King, Queen, Jack, and 10 cards.</string>

    <string name="playerTurn">Player Turn</string>

    <string name="betLayoutTitle">Bet Amount?</string>
    <string name="add5">+$5</string>
    <string name="add10">+$10</string>
    <string name="add25">+$25</string>
    <string name="add50">+$50</string>
    <string name="moneySymbol">$</string>
    <string name="letsGo">Let\'s Go!</string>
    <string name="overMoneyHeldError">You don\'t have that much money in your wallet!</string>
    <string name="notEnoughMoneyBetError">Minimum bet is $5.00 at this table.</string>
    <string name="currentMoney">Your Wallet has: $</string>
    <string name="currentMoneyNoSign">Your Wallet Has:</string>
    <string name="dollarSign">$</string>

    <string name="valueForAce">Value for Ace Card?</string>
    <string name="aceSubtext">Note: Ace value will be automatically set to 1 if total score goes over 21.</string>]
    <string name="one">1</string>
    <string name="eleven">11</string>

    <string name="dealerTotal">Dealer Total:&#160;</string>
    <string name="currentScore">Current Score:&#160;</string>
    <string name="currentBet">Current Bet: $</string>
    <string name="hit">hit</string>
    <string name="stand">stand</string>
    <string name="doubleBtn">double</string>
    <string name="exampleCard">exampleCard</string>

    <string name="aboutHeader">About the App</string>
    <string name="aboutText">
        BlackJack was made by Suzy Kersten and Harrison Welch over the period of 3 weeks for
        our CSCI 4020 class.
    </string>
    <string name="backToMain">Back to Main Menu</string>

    <string name="zero">0</string>
</resources>
